[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
libhackrf-rs = { path = "../../" }
ctrlc = "3.4.1"
clap = { version = "4.4.7", features = ["cargo"] }

[[bin]]
name = "info"
path = "src/info.rs"

[[bin]]
name = "rx"
path = "src/rx.rs"

[[bin]]
name = "rx_to_file"
path = "src/rx_to_file.rs"

[[bin]]
name = "tx"
path = "src/tx.rs"
